--- a/traits.html
+++ b/traits.html
@@ -1,25 +1,51 @@
-
 <!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
 <title>Nova • Traits</title><link rel="stylesheet" href="assets/css/style.css"/><script defer src="assets/js/state.js"></script><script defer src="assets/js/data.js"></script></head>
 <body><div class="container"><div class="header"><div class="brand">Nova</div><div class="badge">Selected: <span id="count">0</span> traits</div></div>
-<div class="card"><h1 class="h1">Select traits that feel true</h1><div id="filters" class="list"></div><div class="hr"></div><div id="tray" class="grid cols-3"></div><div class="hr"></div><div class="grid cols-2"><button id="next" class="btn primary">See My Results</button><button id="clear" class="btn ghost">Clear</button></div></div><div class="footer-ver">v8.7f • Unified</div></div>
+<div class="card"><h1 class="h1">Select traits that feel true</h1><div id="filters" class="list"></div><div class="hr"></div><div id="tray" class="grid cols-3"></div><div class="hr"></div>
+<div class="grid cols-3"><button id="next" class="btn primary" disabled>See My Results</button><a class="btn ghost" href="categories.html">Back to Categories</a><button id="clear" class="btn ghost">Clear</button></div><div id="hint" class="small" style="margin-top:10px;opacity:.9"></div></div><div class="footer-ver">v8.8b • Unified 12-Category Edition</div></div>
 <script>
 (async ()=>{
   const selectedIds = new Set(JSON.parse(localStorage.getItem('nova.selectedCategoryIds')||'[]'));
   const selectedLabels = JSON.parse(localStorage.getItem('nova.selectedCategories')||'[]');
-  document.getElementById('filters').innerHTML = selectedLabels.map(l=> `<span class="pill">${l}</span>`).join('');
+  document.getElementById('filters').innerHTML = selectedLabels.map(l=> '<span class="pill">'+l+'</span>').join('');
 
   const EMBED=[
-    {"id":"detail","name":"Detail-oriented","categoryId":"bizfin"},
-    {"id":"problem","name":"Problem solving","categoryId":"tech"},
-    {"id":"empathy","name":"Empathy","categoryId":"health"},
-    {"id":"comm","name":"Communication","categoryId":"edu"},
-    {"id":"creative","name":"Creativity","categoryId":"creative"},
-    {"id":"lead","name":"Team leadership","categoryId":"pubsvc"},
-    {"id":"analysis","name":"Data analysis","categoryId":"science"},
-    {"id":"hands","name":"Hands-on","categoryId":"trades"},
-    {"id":"customer","name":"Customer focus","categoryId":"hospitality"},
-    {"id":"reliable","name":"Reliability","categoryId":"workers"}
+    {"id":"tech_problem","name":"Problem solving","categoryId":"tech"},
+    {"id":"tech_systems","name":"Systems thinking","categoryId":"tech"},
+    {"id":"health_empathy","name":"Empathy","categoryId":"health"},
+    {"id":"health_precision","name":"Precision","categoryId":"health"},
+    {"id":"edu_communication","name":"Communication","categoryId":"edu"},
+    {"id":"edu_coaching","name":"Coaching","categoryId":"edu"},
+    {"id":"bizfin_detail","name":"Detail-oriented","categoryId":"bizfin"},
+    {"id":"bizfin_analysis","name":"Data analysis","categoryId":"bizfin"},
+    {"id":"creative_creativity","name":"Creativity","categoryId":"creative"},
+    {"id":"creative_story","name":"Storytelling","categoryId":"creative"},
+    {"id":"pubsvc_lead","name":"Team leadership","categoryId":"pubsvc"},
+    {"id":"pubsvc_service","name":"Service mindset","categoryId":"pubsvc"},
+    {"id":"science_research","name":"Research","categoryId":"science"},
+    {"id":"science_curiosity","name":"Curiosity","categoryId":"science"},
+    {"id":"trades_hands","name":"Hands-on","categoryId":"trades"},
+    {"id":"trades_safety","name":"Safety minded","categoryId":"trades"},
+    {"id":"hospitality_customer","name":"Customer focus","categoryId":"hospitality"},
+    {"id":"hospitality_team","name":"Team player","categoryId":"hospitality"},
+    {"id":"workers_reliable","name":"Reliability","categoryId":"workers"},
+    {"id":"workers_time","name":"Time management","categoryId":"workers"},
+
+    {"id":"eng_problem","name":"Problem solving","categoryId":"engineering"},
+    {"id":"eng_analytical","name":"Analytical thinking","categoryId":"engineering"},
+    {"id":"eng_precision","name":"Precision","categoryId":"engineering"},
+    {"id":"eng_safety","name":"Safety minded","categoryId":"engineering"},
+    {"id":"eng_systems","name":"Systems design","categoryId":"engineering"},
+    {"id":"eng_techwriting","name":"Technical writing","categoryId":"engineering"},
+
+    {"id":"ops_org","name":"Organization","categoryId":"operations"},
+    {"id":"ops_eff","name":"Efficiency","categoryId":"operations"},
+    {"id":"ops_sched","name":"Scheduling / planning activities","categoryId":"operations"},
+    {"id":"ops_process","name":"Process improvement","categoryId":"operations"},
+    {"id":"ops_resource","name":"Resource management","categoryId":"operations"},
+    {"id":"ops_lead","name":"Leadership","categoryId":"operations"},
+    {"id":"ops_comm","name":"Communication","categoryId":"operations"},
+    {"id":"ops_decision","name":"Decision-making","categoryId":"operations"}
   ];
 
   let list = EMBED;
@@ -30,12 +56,19 @@
 
   const tray=document.getElementById('tray');
   const selectedKeys = new Set((JSON.parse(localStorage.getItem('nova.selectedTraits')||'[]')).map(t=> t.id||t.name||t));
+  const hint=document.getElementById('hint');
+  const nextBtn=document.getElementById('next');
 
-  function render(){ tray.innerHTML=''; pool.forEach(t=>{ const key=t.id||t.name; const b=document.createElement('button'); b.className='btn ghost'; b.innerHTML=`<div><div style="font-weight:800">${t.name}</div><div class="small">${t.categoryId}</div></div>`; if(selectedKeys.has(key)) b.classList.add('active'); b.onclick=()=>{ if(selectedKeys.has(key)){ selectedKeys.delete(key); b.classList.remove('active'); } else { selectedKeys.add(key); b.classList.add('active'); } setCount(); }; tray.appendChild(b); }); setCount(); }
-  function setCount(){ document.getElementById('count').textContent = selectedKeys.size; }
+  function updateGate(){
+    const n = selectedKeys.size;
+    document.getElementById('count').textContent = n;
+    if(n>=8){ nextBtn.disabled=false; hint.textContent=''; } else { nextBtn.disabled=true; hint.textContent='Pick at least 8 traits to unlock results.'; }
+  }
+
+  function render(){ tray.innerHTML=''; pool.forEach(t=>{ const key=t.id||t.name; const b=document.createElement('button'); b.className='btn ghost'; b.innerHTML='<div><div style="font-weight:800">'+t.name+'</div><div class="small">'+t.categoryId+'</div></div>'; if(selectedKeys.has(key)) b.classList.add('active'); b.onclick=()=>{ if(selectedKeys.has(key)){ selectedKeys.delete(key); b.classList.remove('active'); } else { selectedKeys.add(key); b.classList.add('active'); } updateGate(); }; tray.appendChild(b); }); updateGate(); }
   render();
 
-  document.getElementById('next').onclick=()=>{ const chosen = pool.filter(t=> selectedKeys.has(t.id||t.name)); localStorage.setItem('nova.selectedTraits', JSON.stringify(chosen)); if(window.NOVA&&NOVA.state){ NOVA.state.selectedTraits = chosen; NOVA.save(); } location.href='results.html'; };
+  nextBtn.onclick=()=>{ const chosen = pool.filter(t=> selectedKeys.has(t.id||t.name)); localStorage.setItem('nova.selectedTraits', JSON.stringify(chosen)); if(window.NOVA&&NOVA.state){ NOVA.state.selectedTraits = chosen; NOVA.save(); } location.href='results.html'; };
   document.getElementById('clear').onclick=()=>{ selectedKeys.clear(); render(); };
 })();
 </script></body></html>
