--- a/qa.html
+++ b/qa.html
@@ -1,4 +1,3 @@
-
 <!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
 <title>Nova • QA</title><link rel="stylesheet" href="assets/css/style.css"/><script defer src="assets/js/state.js"></script><script defer src="assets/js/data.js"></script></head>
 <body><div class="container"><div class="header"><div class="brand">Nova</div><div class="badge">QA dashboard</div></div>
@@ -7,7 +6,7 @@
   <div class="card"><div class="small">LocalStorage</div><pre id="ls" class="small" style="white-space:pre-wrap"></pre><button class="btn" id="reset">Reset</button></div>
   <div class="card"><div class="small">Data Loads</div><pre id="dl" class="small" style="white-space:pre-wrap"></pre></div>
   <div class="card"><div class="small">Flow</div><a class="btn" href="index.html">Welcome</a><a class="btn" href="categories.html">Categories</a><a class="btn" href="traits.html">Traits</a><a class="btn" href="results.html">Results</a><a class="btn" href="reflection.html">Reflection</a><a class="btn" href="plans.html">Plans</a></div>
-</div></div><div class="footer-ver">v8.7f • Unified</div></div>
+</div></div><div class="footer-ver">v8.8b • Unified 12-Category Edition</div></div>
 <script>
 (async ()=>{
   function showLS(){ const o={selectedCategoryIds:JSON.parse(localStorage.getItem('nova.selectedCategoryIds')||'[]'),selectedCategories:JSON.parse(localStorage.getItem('nova.selectedCategories')||'[]'),selectedTraits:JSON.parse(localStorage.getItem('nova.selectedTraits')||'[]'),matches:JSON.parse(localStorage.getItem('nova.matches')||'[]'),reflection:JSON.parse(localStorage.getItem('nova.reflection')||'{}')}; document.getElementById('ls').textContent = JSON.stringify(o,null,2); }
